# autodoist

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  autodoist.py  metadata.sqlite  next_action_planner.py  progress.txt  pyproject.toml  requirements.txt  setup.py  test_autodoist.py  test_labeling.py
.github/workflows/: ci.yaml  docker-publish.yml
docs/adr/: 0001-json-operational-logs.md  0002-preserve-legacy-behavior-during-next-action-planner-migration.md  0003-label-strategy-cascade-covers-both-root-selection-and-child-propagation.md
docs/agents/: domain.md  issue-tracker.md
